assets/css/style.css
.osr #main {
  background: none;
}

#hero-container,
#intro-scene-trigger,
#scene1-pin,
#scene2

{
    overflow-x: hidden;
    scroll-behavior: smooth;  
}

#flip-today {
    height: 0px;
}

#flip-osr {
    height: 0px;
}

#ogrid2-mobile {
    height: 0px;
}


#today-margin {
    margin-left: 60%;
}

#service-h1-container {
    margin-left: 12%;
    margin-top: 12%;
}

#card-cta-container {
    background-color: #03236c;
}


/*SETUP AND Z-INDEX*/
/*-------------------------------------------------------------------------*/
body {
    font-family: "Rational Text", Arial, Helvetica, sans-serif;
    font-size: 14px;
    background-color: #EDF5FC;
}

h1,
h2,
h3,
h4,
h5,
p {
    margin: 0;
    padding: 0;
}

h1,
h2,
h3,
h4,
h5 {
    line-height: 1.1;
    font-weight: 600;
}

li {
    color: #adb8c9;
}


.spacer-container.h-100 {
    height: 100vh;
}

.spacer-container.h-200 {
    height: 200vh;
}

.spacer-container.h-300 {
    height: 300vh;
}

.spacer-container.h-400 {
    height: 440vh;
}

.spacer-container.h-500 {
    height: 500vh;
}

.spacer-container.girl-space {
    height: 283vh;
}

.spacer-container.h2-space {
    height: 140vh;
}

.spacer-container.end-space {
    height: 180vh;
}
.spacer-container.hero-space-70 {
    height: 70vh;
}
.spacer-container.hero-space-30 {
    height: 30vh;
}
.spacer-container.hero-space-120 {
    height: 120vh;
}
.spacer-container.hero-space-80 {
    height: 80vh;
}
.spacer-container.hero-space-10 {
    height: 10vh;
}
.spacer-container.hero-space-60 {
    height: 60vh;
}

/* Colors */
.bg-white {
    color: #f5f7f9;
}

.lblue {
    color: #9dd1ff;
}

.blue {
    color: #1a80ff;
}

.nblue {
    color: #4F5F6C;
}

.dblue {
    color: #00216E;
}

.white {
    color: #fff;
}
/* End Colors */

#anim1-container {
    margin:0;
    padding:0;
    z-index: 1;
}
#scene1 {
    z-index: 50;
}
#scene1-2-trigger {
    z-index: 60;
}
#scene1-pin {
    z-index: -11;
}
#scene2-pin {
    z-index: -10;
}
#scene2-3-pin {
    z-index: 190;
}
#panels-container {
    z-index: 100;
}
#hero-container2 {
    z-index: -1;
}
.container {
    text-align: center;
    width: 100%;
    margin: auto;
}

.container-fluid {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.pinned-element {
    position: absolute;
}

.animation-container,
.spacer-container {
    height: 100vh;
}

.spacer-container.h-50 {
    height: 50vh;
}

.col-8 {
    width: 66.66667%;
}

.offset-7 {
    margin-left: 58.333333%;
}

.img-fluid {
    max-width: 100%;
    height: auto;
}

.text-right {
    text-align: right !important;
}
.text-left {
    text-align: left !important;
}
.text-center {
    text-align: center !important;
}


.height-h-10 {
    height: 10vh;
}
.height-h-25 {
    height: 25vh;
}
.height-h-50 {
    height: 50vh;
}
.height-h-60 {
    height: 60vh;
}
.height-h-75 {
    height: 75vh;
}
.height-h-100 {
    height: 100vh;
}

.mb-0 {
    margin-bottom: 0rem !important;
}
.mb-1 {
    margin-bottom: 0.25rem !important;
}
.mb-2 {
    margin-bottom: 0.5rem !important;
}
.mb-3 {
    margin-bottom: 1rem !important;
}
.mb-4 {
    margin-bottom: 1.5rem !important;
}
.mb-5 {
    margin-bottom: 3rem !important;
}

.drounded-0 {
    border-radius: 0 !important;
}

.my-auto {
    margin-top: auto !important;
    margin-bottom: auto !important;
}

.not-mobile {
    display: block;
}
.only-mobile {
    visibility: hidden;
}


/*_________________________________  MAIN  ___________________________________*/

.hero {
    background-image: url('../img/bg-image-nosquares.jpg');
    background-size: cover;
    background-size:100% auto;
    background-repeat: no-repeat;
    background-position: top center;
    max-width: 100% auto;

}

#squares-left-container {
    padding-left: 300px;
    padding-top: 300px;
    width: 690px;
}

#squares-right-container {
    width: 680px;
    margin-left: -480px;
    margin-top: 10%;
}

#flip-today-container {
}

#flip-today {
}

#ogrid-wrapper {
}

#oGrid {
    margin-left: auto;
    margin-right: auto;
    margin-top: 23%;
    margin-left: 25%;
    padding-left: 0;
    width: 38%;
}

.hero-container-header {
    padding-top: 19%;
    padding-right: 0px;
    margin-left: 0px;
}

.hero h1 {
    font-size: 58px;
    line-height: 60px;
    padding-left: 24%;
    padding-right: 0px;
    margin-left: -6%;
}

.hero h2 {
    font-size: 28px;
    font-weight: 400;
    line-height: 32px;
    padding-left: 35%;
    margin-left: -1%;
}

.service {
    padding-left: 0px;
}

.service h1 {
    font-size: 72px;
    margin-left: -60px;
}

.today {
    padding-left: 0px;
    padding-right: 0px;
}

.today p {
    font-size: 24px;
    line-height: 2.3rem;
    padding-bottom: 4rem;
    padding-left: 3rem;
    margin-right: -9rem;
}

#osrChart {
    width: 1360px;
}

#osr-container {
    padding-left: 40%;
    padding-top: 16%;
}

#flip-osr-conatainer {
    }
#flip-osr {
    }

.slide-list-container {
    padding-left: 23px;
/*    padding-top: 0%;*/
}

#panels {
    width: 623px;
}

#panels-container {
/*    padding-top: 200px;*/
    padding-top: 12%;
    padding-left: 21%;
}

#oGrid2 {
    width: 1060px;
}

#oGrid2-padding {
    padding-left: 18%;
    padding-top: 120px;
    padding-bottom: 0px;
}

#ogrid2-mobile {
    width: 0px;
    height: 0px;
}

#ogrid2-mobile-container {
    padding-left: 0px;
}

#hero-container2 {
    background-image: url('../img/bg-image2.jpg');
    background-size: cover;
    background-size:100% auto;
    background-repeat: no-repeat;
    background-position: center center;
    max-width: 100% auto;
}

#hero2-img {
}

.slide-list {
    font-weight: 500;
    font-size: 20px;
    text-align: left;
    list-style-type: none;
    cursor: pointer;
    cursor: hand;
    padding-top: 14%;
}


.slide-list li {
    padding: 4px;
}
.slide-list a {
    color: #ADB8C9;
    text-decoration: none;
    cursor: pointer;
    cursor: hand;
}
/* ... */

